--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,7 @@
     margin-right: 10px;
     fill: currentColor;
 }
-.social-font {
-    fill: #AFB1B8;
-   }
+
 .social-links{
     width: 20px;
     height: 20px;
@@ -18,14 +16,15 @@
     height: 44px;
     border-radius: 50%;
     color: #afb1b8;
+    fill: #afb1b8;;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 5px;
-    margin-right: 5px;
+
     }
 .social:hover, .social:focus {
     color: #afb1b8;
+    fill: #ffffff;
     background-color: var(--brand-color);
     cursor: pointer;
 }
@@ -80,6 +79,7 @@ body {
 .information {
     color: #FFFFFF;
     background-image: url(../images/Fondo.jpg);
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: 1600px 600px;
     box-sizing: border-box;
@@ -105,6 +105,7 @@ h1 {
     border-radius: 4px;
     width: 261px;
     height: 50px;
+    border: none;
 }
 h4 {
     color: #212121;
@@ -139,10 +140,12 @@ h5 {
     color: #757575;
     margin-bottom: 30px;
 }
-footer {
+.footer {
     background-color: var(--background-color);
     font-size: 14px;
     box-sizing: border-box;
+    display: flex;
+    width: 100%;
     }
 .address {
     color: #FFFFFF;
@@ -176,6 +179,14 @@ footer {
     background-color: var(--brand-color);
     color: #FFFFFF;
     cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.actual {
+    background-color: var(--brand-color);
+    color: #FFFFFF;
+    cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .text-names {
     font-weight: 700;
@@ -199,10 +210,13 @@ footer {
     justify-content: center;
     padding: 0;
     margin: 0;
+    gap: 30px;
 }
 .list-footer {
     list-style: none;
+    display: flex;
 }
+
 ul {
     margin: 0px;
 }
@@ -217,9 +231,6 @@ ul {
     list-style: none;
     padding-top: 60px;
     padding-bottom: 60px;
-}
-.list-footer {
-    display: flex;
 }
 .menu, .info{
     display: flex;
@@ -244,6 +255,7 @@ header {
     }
 .container-2 {
     width: 100%;
+    max-width: 1300px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -266,8 +278,6 @@ header {
 .list-people {
     background-color: #FFFFFF;
     width: 270px;
-    margin-left: 15px;
-    margin-right: 15px;
     align-items: center;
     line-height: 0.84;
 }
@@ -309,8 +319,7 @@ figure {
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
-    margin-left: 15px;
-    margin-right: 15px;
+    
     }
 .one {
     background-image: url(../images/imagen1.jpg);
@@ -353,9 +362,7 @@ figure {
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     color: #AFB1B8;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 30px;
+
 }
 .companies-icon:hover, .companies-icon:focus {
     color: #2196F3;
@@ -392,8 +399,6 @@ figure {
 
 .marginal {
     margin-top: 15px;
-    margin-right: 30px;
-    margin-bottom: 15px;
     border: 1px solid #EEEEEE;
 }
 
@@ -453,11 +458,6 @@ figure {
     bottom: -38px;
     background-color: #2196F3;
 }
-
-
-
-
-
 
 
 .backdrop {
